# ukui-wallpapers

./: README.md  meson.build  ukui-wallpapers.xml.in  update-background.py
debian/: changelog  control  copyright  rules  watch
gettext/its/: wallpapers.its  wallpapers.loc
po/: LINGUAS  POTFILES.in  bo.po  meson.build  tr.po  ukui-wallpapers.pot  zh_CN.po  zh_TW.po
